syntax = "proto3";

package engine;

option go_package = "./pb";

message DumpMsg{
  string csv_path = 1;
  string dump_path = 2;
}

message Response{
  bool ok = 1;
  string msg = 2;
}

message ForwardRequest{
  uint32 product_id = 1;
  Filter filter = 2;
}

message ForwardView{
  uint32 product_id = 1;
  uint32 status = 2;
  uint32 category = 3;
  uint32 stock = 4;
  uint32 price = 5;
  uint32 flags = 6;
  string tags = 7;
}

message ForwardResponse{
  ForwardView data = 1;
}

message InvertedRequest{
  repeated uint32 product_ids = 1;
  Filter filter = 2;
  uint32 limit = 3;//每个trigger限制多少个
}
message ForwardViewList {
  repeated ForwardView data = 1;
}
message InvertedResponse{
  map<uint32, ForwardViewList> results = 1;
}

enum Operation{
  OpEq = 0;
  OpNotEq = 1;
  OpIn = 2;
  OpNotIn = 3;
  OpRange = 4;
}

message Condition{
  string field = 1;
  Operation op = 2;
  repeated uint64 values = 3;
}

message Filter{
  repeated Condition conditions = 1;
}

service DataEngine{
  rpc ForwardBuilder(DumpMsg) returns (Response);

  rpc InvertedBuilder(DumpMsg) returns (Response);

  rpc LoadForwardIndex(DumpMsg) returns (Response);

  rpc LoadInvertedIndex(DumpMsg) returns (Response);

  rpc GetForward(ForwardRequest) returns (ForwardResponse);

  rpc GetInverted(InvertedRequest) returns (InvertedResponse);
}